--- a/tip-calculator-app-main/scss/main.scss
+++ b/tip-calculator-app-main/scss/main.scss
@@ -1,3 +1,25 @@
 @import "variables";
 
 
+html {
+  font-size: 10px;
+  font-family: $FontPrimary;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  background-color: $primary;
+}
+
+#spliter {
+
+  & .logo__container {
+    display: flex;
+    justify-content: center;
+    background-color: $primary;
+  }
+
+
+}
