--- a/tip-calculator-app-main/scss/button.scss
+++ b/tip-calculator-app-main/scss/button.scss
@@ -6,7 +6,7 @@
   border-radius: 1rem;
   border: none;
   font-weight: 700;
-  font-family: $FontPrimary
+  font-family: $FontPrimary;
 }
 
 .btn.active {
