--- a/tip-calculator-app-main/css/main.css
+++ b/tip-calculator-app-main/css/main.css
@@ -93,8 +93,9 @@ body {
 }
 #spliter .calc__container .numberOfPeople .numberOfPeopleTexts {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
 }
 #spliter .calc__container .numberOfPeople .numberOfPeopleTexts .errorMessage {
   display: none;
@@ -136,7 +137,8 @@ body {
   width: 80%;
   padding: 1.5rem;
   background-color: #00666b;
-  margin: 0 auto;
+  color: #00494d;
+  margin: 5rem auto 0;
   font-size: 1.4rem;
   font-family: "Space Mono";
   text-transform: uppercase;
@@ -144,7 +146,18 @@ body {
   border: none;
   border-radius: 1rem;
 }
+#spliter .calc__container .summary__button .summary__btn.active {
+  background-color: #26c0ab;
+  color: #00666b;
+  font-weight: bold;
+}
 
+@media (min-width: 340px) {
+  #spliter .calc__container .numberOfPeople .numberOfPeopleTexts {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+}
 @media (min-width: 800px) {
   #spliter .calc__container {
     display: flex;
