--- a/tip-calculator-app-main/scss/main.scss
+++ b/tip-calculator-app-main/scss/main.scss
@@ -42,8 +42,6 @@ body {
       padding: 2.5rem;
 
       &__buttons {
-        //display: flex;
-        //flex-wrap: wrap;
         display: grid;
         grid-template-rows:  1fr 1fr;
         grid-template-columns: 1fr 1fr;
@@ -76,8 +74,9 @@ body {
 
       & .numberOfPeopleTexts {
         display: flex;
-        justify-content: space-between;
-        align-items: center;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
 
         & .errorMessage {
           display: none;
@@ -126,13 +125,34 @@ body {
         width: 80%;
         padding: 1.5rem;
         background-color: $VeryDarkCyan2;
-        margin: 0 auto;
+        color: $VeryDarkCyan;
+        margin: 5rem auto 0;
         font-size: 1.4rem;
         font-family: 'Space Mono';
         text-transform: uppercase;
         cursor: pointer;
         border: none;
         border-radius: 1rem;
+      }
+
+      & .summary__btn.active {
+        background-color: $primary;
+        color: $VeryDarkCyan2;
+        font-weight: bold;
+      }
+    }
+  }
+}
+@media (min-width: 340px) {
+  #spliter {
+    & .calc__container {
+
+      & .numberOfPeople {
+
+        & .numberOfPeopleTexts {
+          flex-direction: row;
+          justify-content: space-between;
+        }
       }
     }
   }
