--- a/tip-calculator-app-main/css/main.css
+++ b/tip-calculator-app-main/css/main.css
@@ -62,6 +62,14 @@ body {
   display: flex;
   flex-direction: column;
   padding: 2.5rem;
+  position: relative;
+}
+#spliter .calc__container .bill .bill__icon {
+  position: absolute;
+  top: 69px;
+  left: 33px;
+  width: 1.5rem;
+  height: 2rem;
 }
 #spliter .calc__container .selectTip {
   padding: 2.5rem;
@@ -88,6 +96,7 @@ body {
 #spliter .calc__container .numberOfPeople {
   display: flex;
   flex-direction: column;
+  position: relative;
   margin-top: 1.5rem;
   padding: 2.5rem;
 }
@@ -104,6 +113,13 @@ body {
   display: block;
   font-size: 1.5rem;
   color: red;
+}
+#spliter .calc__container .numberOfPeople .people__icon {
+  position: absolute;
+  top: 69px;
+  left: 33px;
+  width: 1.5rem;
+  height: 2rem;
 }
 #spliter .calc__container .summary {
   margin-top: 1.5rem;
@@ -127,7 +143,7 @@ body {
 }
 #spliter .calc__container .summary__content .summary__number {
   color: #26c0ab;
-  font-size: 2.3rem;
+  font-size: 2.5rem;
   text-align: right;
 }
 #spliter .calc__container .summary__button {
@@ -171,6 +187,10 @@ body {
   #spliter .calc__container .set__container .bill {
     padding: 0 2.5rem;
   }
+  #spliter .calc__container .set__container .bill .bill__icon {
+    top: 43px;
+    left: 33px;
+  }
   #spliter .calc__container .set__container .selectTip {
     padding: 0.5rem 2.5rem;
   }
@@ -209,6 +229,12 @@ body {
   }
   #spliter .calc__container .set__container .numberOfPeople .numberOfPeopleTexts {
     flex-direction: row;
+  }
+  #spliter .calc__container .set__container .numberOfPeople .people__icon {
+    top: 50px;
+  }
+  #spliter .calc__container .summary__content .summary__number {
+    font-size: 3.3rem;
   }
 }
 /*# sourceMappingURL=main.css.map */
